--- a/Statics/index.html
+++ b/Statics/index.html
@@ -8,7 +8,7 @@
         href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@0,200;0,300;0,500;0,600;1,200;1,300;1,500&display=swap"
         rel="stylesheet">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="CSS/style.css" />
 		<title>TextScript</title>
 	</head>
 	<body>
