--- a/Statics/index.html
+++ b/Statics/index.html
@@ -33,7 +33,7 @@
 						<select name="room" id="room">
 							<option value="JavaScript">JavaScript</option>
 							<option value="Python">Python</option>
-							<option value="PHP">C++</option>
+							<option value="C++">C++</option>
 							<option value="C#">C#</option>
 							<option value="Ruby">Ruby</option>
 							<option value="Java">Java</option>
