added a location sending feature to the webApp

--- a/Statics/chat.html
+++ b/Statics/chat.html
@@ -38,6 +38,9 @@
         />
         <button class="btn"><i class="fa fa-paper-plane-o"></i> Send</button>
       </form>
+      <form id="loc-n btn">
+        <button class="btn location-btn"><i class="fa fa-map-marker"></i> Send Location</button>
+      </form>
     </div>
   </div>
 <!--that is how you access front end library of socket.io 
