location feature bugs removed

--- a/Statics/chat.html
+++ b/Statics/chat.html
@@ -38,8 +38,8 @@
         />
         <button class="btn"><i class="fa fa-paper-plane-o"></i> Send</button>
       </form>
-      <form id="loc-n btn">
-        <button class="btn location-btn"><i class="fa fa-map-marker"></i> Send Location</button>
+      <form>
+        <button class="btn location-btn"  id="loc"><i class="fa fa-map-marker"></i> Send Location</button>
       </form>
     </div>
   </div>
