--- a/Statics/chat.html
+++ b/Statics/chat.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link
-        href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@0,200;0,300;0,500;0,600;1,200;1,300;1,500&display=swap"
-        rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
+    href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@0,200;0,300;0,500;0,600;1,200;1,300;1,500&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+    integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="CSS/style.css">
   <title>TextScript</title>
 </head>
+
 <body>
   <div class="chat-container">
     <header class="chat-header">
@@ -29,28 +32,23 @@
     </main>
     <div class="chat-form-container">
       <form id="chat-form">
-        <input
-          id="msg"
-          type="text"
-          placeholder="Enter Message"
-          required
-          autocomplete="off"
-        />
+        <input id="msg" type="text" placeholder="Enter Message" required autocomplete="off" />
         <button class="btn"><i class="fa fa-paper-plane-o"></i> Send</button>
       </form>
       <form>
-        <button class="btn location-btn"  id="loc"><i class="fa fa-map-marker"></i> Send Location</button>
+        <button class="btn location-btn" id="loc"><i class="fa fa-map-marker"></i> Send Location</button>
       </form>
     </div>
   </div>
-<!--that is how you access front end library of socket.io 
+  <!--that is how you access front end library of socket.io 
 to be able to make a connection with server with the use
 of front end JS(here:main.js)-->
   <script src="/socket.io/socket.io.js"></script>
   <!--QS library ahead-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.10.1/qs.min.js" 
-  integrity="sha512-aTKlYRb1QfU1jlF3k+aS4AqTpnTXci4R79mkdie/bp6Xm51O5O3ESAYhvg6zoicj/PD6VYY0XrYwsWLcvGiKZQ=="
-   crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.10.1/qs.min.js"
+    integrity="sha512-aTKlYRb1QfU1jlF3k+aS4AqTpnTXci4R79mkdie/bp6Xm51O5O3ESAYhvg6zoicj/PD6VYY0XrYwsWLcvGiKZQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="js/main.js"></script>
 </body>
+
 </html>
