--- a/Statics/index.html
+++ b/Statics/index.html
@@ -1,47 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<link
-        href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@0,200;0,300;0,500;0,600;1,200;1,300;1,500&display=swap"
-        rel="stylesheet">
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="CSS/style.css" />
-		<title>TextScript</title>
-	</head>
-	<body>
-		<div class="join-container">
-			<header class="join-header">
-				<h1><i class="fa fa-comments-o"></i> TextScript</h1>
-			</header>
-			<main class="join-main">
-				<form action="chat.html">
-					<div class="form-control">
-						<label for="username">Username</label>
-						<input
-							type="text"
-							name="username"
-							id="username"
-							placeholder="Enter username..."
-							required
-						/>
-					</div>
-					<div class="form-control">
-						<label for="room">Room</label>
-						<select name="room" id="room">
-							<option value="JavaScript">JavaScript</option>
-							<option value="Python">Python</option>
-							<option value="C++">C++</option>
-							<option value="C#">C#</option>
-							<option value="Ruby">Ruby</option>
-							<option value="Java">Java</option>
-						</select>
-					</div>
-					<button type="submit" class="btn">Join Chat</button>
-				</form>
-			</main>
-		</div>
-	</body>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<link
+		href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@0,200;0,300;0,500;0,600;1,200;1,300;1,500&display=swap"
+		rel="stylesheet">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="CSS/style.css" />
+	<title>TextScript</title>
+</head>
+
+<body>
+	<div class="join-container">
+		<header class="join-header">
+			<h1><i class="fa fa-comments-o"></i> TextScript</h1>
+		</header>
+		<main class="join-main">
+			<form action="chat.html">
+				<div class="form-control">
+					<label for="username">Username</label>
+					<input type="text" name="username" id="username" placeholder="Enter username..." required />
+				</div>
+				<div class="form-control">
+					<label for="room">Room</label>
+					<select name="room" id="room">
+						<option value="JavaScript">JavaScript</option>
+						<option value="Python">Python</option>
+						<option value="C++">C++</option>
+						<option value="C#">C#</option>
+						<option value="Ruby">Ruby</option>
+						<option value="Java">Java</option>
+					</select>
+				</div>
+				<button type="submit" class="btn">Join Chat</button>
+			</form>
+		</main>
+	</div>
+</body>
+
 </html>
